Refactor multiple sections to utilize structured props for content management

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -4,10 +4,7 @@ import heroImage from "../images/photos/hero_image.jpg";
 import Highlight1 from "../images/Highlight1.svg";
 import Highlight2 from "../images/Highlight2.svg";
 
-// const { heading, subheading, image } = Astro.props;
-
-const { content } = Astro.props
-const { h1, h2, buttons } = content;
+const { h1, h2, buttons } = Astro.props;
 ---
 
 <section
