--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -1,32 +1,7 @@
 ---
-interface ContentItem {
-	icon?: string;
-	title: string;
-	description: string;
-}
+import type { ListItem } from "../interfaces";
 
-const common: ContentItem[] = [
-	{
-		title: "Early-Stage Web&nbsp;Development",
-		description:
-			"Every decision made in the early stages impacts the future of your product — trust our experts to get it right from the start.",
-		// description: "We specialize in building MVPs and crafting scalable, reliable software architectures. Every decision we make ensures your foundation is future-proof, saving you time and money as you grow."
-	},
-	{
-		title: "Supporting Creative Teams",
-		description:
-			"With extensive experience working alongside designers and marketers, we ensure smooth integration of technical solutions into your campaigns and strategies.",
-		// description: "Our expertise in collaborating with design and marketing teams guarantees smooth communication and fast results. We understand the language of business and creatives alike, delivering exactly what your vision demands."
-	},
-	{
-		title: "Auditing and Consulting",
-		description:
-			"With experience in renowned international companies, we provide top-tier audits and actionable insights.",
-		// description: "Our senior specialists, with experience from international and renowned companies, offer tailored audits and actionable insights. Get the clarity and strategy you need to drive success."
-	},
-];
-
-const { content = common } = Astro.props;
+const { title, services } = Astro.props;
 ---
 
 <section class="sectionSize bg-black text-white">
@@ -34,22 +9,22 @@ const { content = common } = Astro.props;
 		<h2
 			class="secondaryTitle bg-underline9 bg-100% bg-left-bottom bg-no-repeat pb-4"
 		>
-			What we do
+			{ title }
 		</h2>
 	</div>
 	<div class="flex flex-col md:flex-row">
 		{
-			content.map((item, i) => (
+			services.map(({icon, title, description}: ListItem, i) => (
 				<div class="mx-8 my-4 flex flex-1 flex-col items-center">
 					<div
 						class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-xl text-black"
-						set:html={item.icon || i + 1}
+						set:html={icon || i + 1}
 					/>
 					<h3
 						class="mb-2 min-h-14 text-center font-montserrat text-xl font-medium"
-						set:html={item.title}
+						set:html={title}
 					/>
-					<p class="text-center font-montserrat" set:html={item.description} />
+					<p class="text-center font-montserrat" set:html={description} />
 				</div>
 			))
 		}
