--- a/src/components/TestimonialSection.astro
+++ b/src/components/TestimonialSection.astro
@@ -3,23 +3,7 @@ import { Image } from "astro:assets";
 import QuotationLeft from "../images/Quotation_left.svg";
 import QuotationRight from "../images/Quotemark_right.svg";
 
-interface contentItem {
-	text: string;
-	name: string;
-	position: string;
-	company: string;
-	url?: URL;
-}
-
-const content: contentItem[] = [
-	{
-		text: "",
-		name: "Kirill Zhirnov",
-		position: "CEO",
-		company: "Boundless Commerce",
-		url: new URL("https://boundless-commerce.com"),
-	},
-];
+const { title, testimonials } = Astro.props;
 ---
 
 <section class="sectionSize pb-10 pt-4 text-center md:pb-16">
@@ -34,7 +18,7 @@ const content: contentItem[] = [
 
 		<div class="mx-auto md:max-w-96">
 			{
-				content.map((item) => (
+				testimonials.map((item) => (
 					// <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 					<div class="bg-gray-50 rounded-md py-10">
 						<div class="relative">
@@ -44,9 +28,7 @@ const content: contentItem[] = [
 								class="absolute -left-24 top-3 h-12 md:-left-36 md:top-0 md:h-16"
 							/>
 							<p class="text-gray-500 text-md mx-10 mb-4 font-normal italic">
-								{/* {item.text} */}
-								Artem is an experienced developer. I&nbsp;was really happy
-								to&nbsp;work with him!
+								{item.quote}
 							</p>
 							<Image
 								src={QuotationRight}
@@ -56,10 +38,10 @@ const content: contentItem[] = [
 						</div>
 
 						<h6 class="text-md font-semibold text-[#000]">
-							{item.name}
+							{item.title}
 							<br />
 							<span class="text-gray-300 text-sm font-medium">
-								— {item.position} at {item.company}
+								— {item.role} at {item.company}
 							</span>
 						</h6>
 					</div>
