--- a/src/pages/marketing-communication.astro
+++ b/src/pages/marketing-communication.astro
@@ -14,54 +14,14 @@ import { Picture, Image } from "astro:assets";
 import AstroLogo from "../images/logos/astro-logo-dark.svg";
 import CrossIcon from "../images/logos/Cross.svg";
 
-const content = {
-	services: [
-		{
-			icon: "🎯",
-			title: "Website Maintenance Services",
-			description:
-				"Seamless website support that keeps your core IT team focused on product development. We handle all technical updates, ensuring your online presence remains smooth and efficient.",
-		},
-		{
-			icon: "📩",
-			title: "Email Marketing",
-			description:
-				"Comprehensive email marketing solutions backed by expert strategic insights. We design, implement, and optimize campaigns that drive engagement and conversion.",
-		},
-		{
-			icon: "👩🏻‍🔬",
-			title: "Hypothesis Validation",
-			description:
-				"Rapid MVP development to test and validate your business ideas quickly. We back up you by setting up robust analytics systems to gather reliable, actionable data that guide your strategic decisions.",
-		},
-	],
-	specialists: {
-		title: "Top-tier specialists ready to collaborate",
-		cards: [
-			{
-				title: "ZAREMA KHALILOVA",
-				description:
-					"Front-end Lead Engineer with extensive expertise in Search Engine Optimization (SEO)",
-				photo: "",
-			},
-			{
-				title: "OLGA KOBCHENKO",
-				description:
-					"Agile Coach and Counsellor with expertise in optimizing teams workflow and productivity",
-			},
-			{
-				title: "DARIA PONOMAREVA",
-				description:
-					"Experienced UX Research Lead with a focus on product culture integration",
-			},
-			{
-				title: "EUGENE KHOMUTENKO",
-				description:
-					"Design manager with four years of experience leading cross-platform design teams at international fintech companies.",
-			},
-		],
-	},
-};
+import { marcomPageCopy } from "../content/textcopy";
+const {
+	hero,
+	services,
+	staff,
+	flow,
+	proof
+} = marcomPageCopy;
 ---
 
 <!doctype html>
@@ -73,60 +33,24 @@ const content = {
 		/>
 	</head>
 	<body class="overflow-x-hidden">
-		<HeroSection
-			heading=`Web Development for your <span class="bg-underline1 bg-100% bg-left-bottom bg-no-repeat pb-1">marketing</span> goals`
-			subheading="We manage the tech.<br>You master the&nbsp;message."
-		/>
-		<ServicesSection content={content.services} />
-		<SliderSection content={content.specialists} />
-		
-		<div>
+		<HeroSection {...hero} />
+		<ServicesSection {...services} />
+
+		<div class="sectionSize">
 			<h2
 				class="text-gray-900 mb-8 w-full text-center text-3xl font-thin leading-none tracking-tighter md:text-5xl lg:text-4xl"
 				style="line-height: 120%;"
 			>
-				<!-- I have 
-				<span class="bg-underline8 bg-100% bg-left-bottom bg-no-repeat pb-2">8&nbsp;years of experience</span>
-				supporting the technical needs of design and marketing departments. This background gives me a solid understanding of market demands, allowing me to turn ideas into market-ready products. I also collaborate with experts as needed. -->
-				<!-- With 8&nbsp;years of experience -->
-				<!-- in supporting the technical needs of design and marketing departments, I have a solid understanding of turning ideas into market-ready products. I also collaborate with specialists as needed. -->
-				<!-- supporting design and marketing departments, I have developed strong skills
-				and built a solid network of -->
-				
-
-				
-				I enjoy collaborating with intelligent, ambitious, and kind people. My network of
-				<!-- I have also built a strong network of -->
-				<span class="bg-underline7 bg-100% bg-left-bottom bg-no-repeat pb-2"
-					>top-tier specialists ready to collaborate:</span
-				>
+				{ staff.title }
+				<!-- Our team is made up exclusively of senior professionals, each with <span
+					class="bg-underline1-flip bg-100% bg-left-bottom bg-no-repeat pb-1"
+					>up&nbsp;to 8 years</span
+				> of proven track record of success in their respective fields. -->
 			</h2>
-			<div class="overflow-x-auto snap-x scroll-ml-6 whitespace-nowrap snap-start">
-				{
-					content.specialists.cards.map(({ title, description, photo }) => (
-						<div class="snap-start inline-block h-full flex-row gap-4 rounded-lg border-2 p-8 w-[90vw] md:min-w-0">
-							<div class="flex-shrink">
-								<div class="pb-3 font-pt-serif text-sm uppercase" set:html={title} />
-								<div class="text-gray-600 text-md italic text-wrap" set:html={description} />
-							</div>
-							<div class="min-w-28 flex-grow">
-								<Image
-									src="https://css-tricks.com/wp-content/cache/breeze-extra/gravatars/8081b26e05bb4354f7d65ffc34cbbd67"
-									alt={`Portrait of ${title}`}
-									height={160/2}
-									width={160/2}
-									class="border-8 border-black rounded-full"
-									/>
-							</div>
-						</div>
-					))
-				}
-			</div>
 		</div>
 
-
-        <StepsSection />
-		
-		<BaseFooter />
+		<StepsSection {...flow} />
+		<TestimonialSection {...proof} />
+		<BaseFooter  />
 	</body>
 </html>
