Refactor format using prettier

--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -4,7 +4,7 @@
 			<div class="mb-4 flex w-full flex-col items-start md:mb-0 lg:flex-row">
 				<!-- <img src="https://thirdspacelearning.com/wp-content/uploads/2022/05/Venn-Diagram-HUB-Image-2.png" class="md:w-[30%]"> -->
 				<h2
-					class="text-gray-900 mb-8 w-full text-center text-3xl font-thin leading-none tracking-tighter md:text-5xl lg:text-4xl"
+					class="mb-8 w-full text-center text-3xl font-thin leading-none tracking-tighter text-gray-900 md:text-5xl lg:text-4xl"
 					style="line-height: 120%;"
 				>
 					We are a web development agency<br />
