--- a/src/components/StepsSection.astro
+++ b/src/components/StepsSection.astro
@@ -12,7 +12,7 @@ const { title, steps } = Astro.props;
 	</div>
 	<div class="md:grid md:grid-cols-2 md:grid-rows-2">
 		{
-			steps.map(({title, description}: ListItem, i) => (
+			steps.map(({ title, description }: ListItem, i) => (
 				<div class="my-6 mr-10 flex items-start font-montserrat">
 					<div class="mr-4 text-2xl font-semibold text-black">{i + 1}.</div>
 					<div>
@@ -27,7 +27,7 @@ const { title, steps } = Astro.props;
 		class="mb-4 mt-12 max-w-80 rotate-2 bg-beige p-8 shadow-2xl lg:mt-4 lg:-rotate-3 lg:self-start xl:ml-16"
 	>
 		<p
-			class="text-gray-600 mb-8 text-left font-montserrat text-base italic leading-relaxed"
+			class="mb-8 text-left font-montserrat text-base italic leading-relaxed text-gray-600"
 		>
 			We follow an agile model, which means that tasks are estimated in advance,
 			and the project has
