--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,13 +14,7 @@ import { Picture, Image } from "astro:assets";
 import AstroLogo from "../images/logos/astro-logo-dark.svg";
 import CrossIcon from "../images/logos/Cross.svg";
 import { agencyPageCopy } from "../content/textcopy";
-const {
-	hero,
-	services,
-	staff,
-	flow,
-	proof
-} = agencyPageCopy;
+const { hero, services, staff, flow, proof } = agencyPageCopy;
 ---
 
 <!doctype html>
@@ -34,10 +28,10 @@ const {
 
 		<div class="sectionSize">
 			<h2
-				class="text-gray-900 mb-8 w-full text-center text-3xl font-thin leading-none tracking-tighter md:text-5xl lg:text-4xl"
+				class="mb-8 w-full text-center text-3xl font-thin leading-none tracking-tighter text-gray-900 md:text-5xl lg:text-4xl"
 				style="line-height: 120%;"
 			>
-				{ staff.title }
+				{staff.title}
 				<!-- Our team is made up exclusively of senior professionals, each with <span
 					class="bg-underline1-flip bg-100% bg-left-bottom bg-no-repeat pb-1"
 					>up&nbsp;to 8 years</span
@@ -52,6 +46,6 @@ const {
 
 		<StepsSection {...flow} />
 		<TestimonialSection {...proof} />
-		<BaseFooter  />
+		<BaseFooter />
 	</body>
 </html>
