--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,10 +31,37 @@ body {
 
 @layer components {
 	.sectionSize {
-		@apply flex flex-col items-center px-4 py-14 md:px-12 lg:px-48;
+		@apply flex flex-col items-center mx-6 px-4 py-14 md:px-12 lg:px-48;
 	}
 	.secondaryTitle {
 		@apply mb-8 bg-left-bottom bg-no-repeat px-16 pb-8 font-pt-serif text-3xl;
+	}
+	.underlineDraw {
+		@apply bg-100% bg-left-bottom bg-no-repeat;
+	}
+	.underline-span {
+		@apply relative inline-block; /* Ensure the element is positioned relative for the ::after to be positioned correctly */
+	}  
+	.underline-span::after {
+		@apply block absolute;
+		content: '';
+		background-size: 150px;
+		background-repeat: no-repeat;
+		position: absolute;
+		left: -30%;
+		right: -70%;
+		top: 1.3em;
+		height: 12px;
+		z-index: -1;
+	}
+	.button {
+		@apply rounded border-2 border-solid w-72 text-center mx-auto py-3 font-semibold;
+	}
+	.button-primary {
+		@apply border-indigo-500 bg-indigo-500 text-white uppercase
+	}
+	.button-secondary {
+		@apply border-black text-black uppercase
 	}
 }
 
