Replace fonts: Montserrat with Inter & PT Serif with Palatino/Cambria/Georgia

--- a/src/components/BannerSection.astro
+++ b/src/components/BannerSection.astro
@@ -12,7 +12,7 @@ import CoverImage from "../images/blog-placeholder-about.jpg";
 	>
 		<div class="col-span-1 md:col-span-3">
 			<h2 class="secondaryTitle px-0">Study Cases</h2>
-			<p class="mb-6 font-montserrat text-sm lg:text-base">
+			<p class="mb-6 font-inter text-sm lg:text-base">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero incidunt
 				consequatur hic! Est deserunt ipsum laboriosam omnis aliquam assumenda
 				vero autem quam libero debitis eius molestiae natus dolores, voluptatum
