--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -21,10 +21,10 @@ const { title, services } = Astro.props;
 						set:html={icon || i + 1}
 					/>
 					<h3
-						class="mb-2 min-h-14 text-center font-montserrat text-xl font-medium"
+						class="mb-2 min-h-14 text-center font-inter text-xl font-medium"
 						set:html={title}
 					/>
-					<p class="text-center font-montserrat" set:html={description} />
+					<p class="text-center font-inter" set:html={description} />
 				</div>
 			))
 		}
