--- a/src/components/BaseFooter.astro
+++ b/src/components/BaseFooter.astro
@@ -23,7 +23,7 @@ import BaseNoscript from "./BaseNoscript.astro";
 			<Image src={TwitterLogo} alt="Twitter logo" class="mx-4" />
 		</a>
 	</div>
-	<div class="font-montserrat text-sm text-white opacity-40">
+	<div class="font-inter text-sm text-white opacity-40">
 		© 2024 Artem Palevich. All rights reserved
 	</div>
 </section>
