Adjust HeroSection layout

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -23,7 +23,7 @@ const { h1, h2, buttons } = Astro.props;
 		/>
 		<div class="mt-7 flex flex-col lg:flex-row justify-stretch gap-2" set:html={renderButtons(buttons)} />
 	</div>
-	<div class="mt-28 flex justify-around md:mt-0 md:block md:flex-1">
+	<div class="mt-28 flex justify-around md:mt-0 md:block md:flex-1 h-44">
 		<div class="relative">
 			<Highlight1
 				width={52}
