--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -1,30 +1,35 @@
 ---
 import type { ListItem } from "../interfaces";
+import HighlightCircle from '../images/drawings/HighlightCircle_small.svg'
 
 const { title, services } = Astro.props;
 ---
 
-<section class="sectionSize bg-black text-white">
+<section class="bg-indigo-500 text-white">
 	<div>
 		<h2
-			class="secondaryTitle bg-underline9 bg-100% bg-left-bottom bg-no-repeat pb-4"
+			class="font-pt-serif font-medium text-xl text-center pt-12 leading-6"
 		>
 			{title}
 		</h2>
 	</div>
-	<div class="flex flex-col md:flex-row">
+	<div class="flex flex-col md:flex-row pt-7 pb-7">
 		{
 			services.map(({ icon, title, description }: ListItem, i) => (
 				<div class="mx-8 my-4 flex flex-1 flex-col items-center">
-					<div
-						class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-xl text-black"
-						set:html={icon || i + 1}
-					/>
-					<h3
-						class="mb-2 min-h-14 text-center font-inter text-xl font-medium"
-						set:html={title}
-					/>
-					<p class="text-center font-inter" set:html={description} />
+					<div>
+						<div class="flex font-inter gap-2">
+							<div class="w-11 h-9 relative">
+								<HighlightCircle height={35} width={43} class="absolute" />
+								<span class="block absolute top-1 left-1/2 -translate-x-1/2 font-pt-serif font-semibold text-2xl leading-7 text-white text-center">{icon || i + 1}</span>
+							</div>
+							<h3
+								class="font-bold leading-7 my-auto"
+								set:html={title}
+							/>
+						</div>
+						<div class="mt-4 text-sm font-inter leading-6 font-normal" set:html={description} />
+					</div>
 				</div>
 			))
 		}
