Make components to use container class for improved responsiveness

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -10,7 +10,7 @@ const { h1, h2, buttons } = Astro.props;
 ---
 
 <section
-	class="flex flex-col justify-center bg-secondary px-6 md:mt-0 md:h-screen md:flex-row md:items-center md:justify-between md:gap-4 md:px-12 lg:px-48"
+	class="container flex flex-col justify-center bg-secondary px-6 md:mt-0 md:h-screen md:flex-row md:items-center md:justify-between md:gap-4 md:px-12 lg:px-48"
 >
 	<div class="md:mr-10 md:flex-1">
 		<h1
