--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -5,7 +5,7 @@ import HighlightCircle from '../images/drawings/HighlightCircle_small.svg'
 const { title, services } = Astro.props;
 ---
 
-<section class="bg-indigo-500 text-white">
+<section class="container bg-indigo-500 text-white">
 	<div>
 		<h2
 			class="font-pt-serif font-medium text-xl text-center pt-12 leading-6"
