Implement FlowSection component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import HeroSection from "../components/HeroSection.astro";
 import ServicesSection from "../components/ServicesSection.astro";
 import StaffSection from "../components/StaffSection.astro";
+import FlowSection from "../components/FlowSection.astro";
 
 import { agencyPageCopy } from "../content/textcopy";
 const { hero, services, staff, flow, proof } = agencyPageCopy;
@@ -15,4 +16,5 @@ const { hero, services, staff, flow, proof } = agencyPageCopy;
 		<div class="h-40 bg-indigo-500 md:hidden"/>
 		<ServicesSection {...services} />
 		<StaffSection {...staff} />
+		<FlowSection {...flow} />
 </LandingLayout>
