--- a/src/components/FlowSection.astro
+++ b/src/components/FlowSection.astro
@@ -2,8 +2,9 @@
 import { Image } from "astro:assets";
 import HeartIcon from "../images/logos/Heart.svg";
 import type { ListItem } from "../interfaces";
+import { renderRichText } from "../utilities";
 
-const { title, steps } = Astro.props;
+const { title, steps, callout } = Astro.props;
 ---
 
 <section class="container">
@@ -23,19 +24,7 @@ const { title, steps } = Astro.props;
 	<div class="mt-8 flex justify-stretch gap-3">
 		<a href="https://calendly.com/apalevich/45min" class="button button-primary">LET'S TALK</a>
 	</div>
-	<div
-		class="mb-4 mt-12 max-w-80 rotate-2 bg-beige p-8 shadow-2xl lg:mt-4 lg:-rotate-3 lg:self-start xl:ml-16"
-	>
-		<p
-			class="mb-8 text-left font-inter text-base italic leading-relaxed text-gray-600"
-		>
-			We follow an agile model, which means that tasks are estimated in advance,
-			and the project has
-			<!-- <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-1"> -->
-			defined milestones.
-			<!-- </span> -->
-			This approach ensures transparency for our clients and allows our professionals
-			to work efficiently.
-		</p>
+	<div class="pt-16 px-7 mb-14">
+		<p class="font-pt-serif text-grayish font-medium text-xl mx-auto" set:html={renderRichText(callout)} />
 	</div>
 </section>
