--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import BaseFooter from "../components/BaseFooter.astro";
 
 interface Props {
     title: string;
@@ -17,4 +18,5 @@ const { title, description } = Astro.props;
 	<body>
         <slot />
     </body>
+    <BaseFooter />
 </html>
