Add pnpm-lock.yaml and update component imports

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro:assets";
-import heroImage from "assets/hero-alt.png";
+import heroImage from "images/hero-alt.png";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
 ---
