--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,9 @@
 ---
 import { SEO } from "astro-seo";
-import Footer from "@components/footer.astro";
-import Navbar from "@components/navbar/navbar.astro";
+import Footer from "@components/Footer.astro";
+// import Navbar from "@components/navbar/navbar.astro";
 import "@fontsource-variable/inter/index.css";
 import '@fontsource-variable/bricolage-grotesque';
-
-
 
 export interface Props {
   title: string;
@@ -22,7 +20,7 @@ const { title } = Astro.props;
 
 const makeTitle = title
   ? title + " | " + "APalevich.Pro"
-  : "APalevich.Pro — Technical Solutions for Marketing Leaders";
+  : "Technical Solutions for Marketing Leaders" + " | " + "APalevich.Pro";
 ---
 
 <!DOCTYPE html>
@@ -36,7 +34,7 @@ const makeTitle = title
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-      description="APalevich.Pro — Technical Solutions for Marketing Leaders"
+      description={makeTitle}
       canonical={canonicalURL}
       twitter={{
         creator: "@apalevich",
