--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -44,7 +44,7 @@ import { Icon } from "astro-icon/components";
         size="lg"
         style="outline"
         rel="noopener"
-        href="mailto:hello@apalevich.com"
+        href="https://wa.me/995511106964"
         class="flex gap-1 items-center justify-center"
         target="_blank">
         <Icon class="text-black w-4 h-4" name="bx:bxl-whatsapp" />
