--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -53,9 +53,9 @@ const { Content } = await entry.render();
     </div>
     <div class="text-center mt-8">
       <a
-        href="/blog"
+        href="/"
         class="bg-gray-100 px-5 py-3 rounded-md hover:bg-gray-200 transition"
-        >← Back to Blog</a
+        >← Back to Home page</a
       >
     </div>
   </Container>
