--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,15 @@ import Cta from "@components/cta.astro";
 import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
+import FullScreenSection from "@components/FullScreenSection.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Technical Solutions for Marketing Leaders">
   <Container>
     <Hero />
+  </Container>
+  <Container>
     <Features />
     <Logos />
     <Cta />
